--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="initial-scale=1">
         <title>{{site.title}} • {{page.title}}</title>
     </head>
-    <link href="{{ site.baseurl }}/assets/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="{{ site.baseurl }}assets/stylesheets/application.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <body class="home">
         <div class="header-wrapper">
             <header>
