Included SASSyness and changed some styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+    <!DOCTYPE html>
+    <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,15 +8,11 @@
     </head>
     <link href="{{ site.baseurl }}assets/stylesheets/css/app.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <body class="home">
-        <div class="header-wrapper">
             <header>
-            <div class="site-title">
                 <h1><a href="/">{{ site.title }}</a></h1>
-            </div>
-            <nav>
-            <a href="{{ site.baseurl }}">Home</a> 
-            </nav>
+                <nav>
+                    <a href="{{ site.baseurl }}">Home</a>
+                </nav>
             </header>
-        </div>
 
-        <div class="page">
+        <div class="wrapper">
