--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,12 @@
 {% include header.html %}
 
-<section>
+<section class="container">
 
-{{ content }}
-
+	<div class="main-photo">
+	</div>
+	<div class="main-bio">
+		{{ content }}
+	</div>
 </section>
 
 {% include footer.html %}
