--- a/assets/stylesheets/sass/app.scss
+++ b/assets/stylesheets/sass/app.scss
@@ -3,58 +3,63 @@
 Style rules for pamo github page
 Jump to individual sections by searching for "$SECTION TITLE"
 
- *******************************************************************************/
+*******************************************************************************/
 
 /* $CONTENTS *******************************************************************
- * Imports
- * Mixins
- * Variables
- * Base
- * Layout
- *******************************************************************************/
+* Imports
+* Mixins
+* Variables
+* Base
+* Layout
+*******************************************************************************/
 
 /* $IMPORTS *******************************************************************/
-
 @import "bourbon/bourbon";
+@import "bitters/bitters";
+@import "neat/neat";
 
 /* $MIXINS ********************************************************************/
 
 /* $VARIABLES *****************************************************************/
 
-$base:            #f5f5f5;
-$primary:         #666666;
-$secondary:       #999999;
-$emphasis:        #333333;
-$lightborder:     #eeeeee;
-$medborder:       #dddddd;
-$darkborder:      #cccccc;
-$blockquote:      #f6f6f6;
+
+$magenta:         rgb(249, 38, 114);
+$yellow:          rgb(230, 219, 116);
+$green:           rgb(166, 226, 46);
+
+$base:            rgb(39, 40, 34);
+$primary:         rgb(248, 248, 242);
+$secondary:       rgb(117, 113, 94);
+$emphasis:        $green;
+$lightborder:     rgb(180,180,180);
+$medborder:       rgb(39, 40, 34);
+$darkborder:      rgb(40,40,40);
+$blockquote:      $base;
 
 /* $BASE ********************************************************************/
 html, body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: $base;
-    color: $primary;
-    font-family: sans-serif;
-    font-size: 1em;
-    margin: 0;
+  background-color: $base;
+  color: $primary;
+  font-size: 1em;
+  margin: 0;
+  font-family: Consolas, Inconsolata, Monaco, monospace;
 }
 
 /* $LAYOUT ********************************************************************/
 
-header, section, footer {
-  padding-left: 0;
-  padding-right: 0;
+header, section, footer, .container {
+  background-color: $base;
 }
 
-.header-wrapper {
-  border-bottom: 2px solid $lightborder;
-}
-
-.site-title {
+footer{
+  padding-bottom: 2.5em;
+  padding-top: 2.5em;
+  border-top: 1px solid $lightborder;
+  margin-top: 2em;
 }
 
 nav {
@@ -62,13 +67,13 @@ nav {
 }
 
 aside {
-  border-top: 2px solid $medborder;
+  border-top: 2px solid $darkborder;
   min-height: 5em;
   padding-top: 1em;
 }
 
 article {
-  border-top: 2px solid $lightborder;
+  border-top: 2px solid $medborder;
   margin-bottom: 3em;
   padding-top: 1em;
 }
@@ -77,19 +82,24 @@ section.single article {
   padding-top: 0;
 }
 
-li {
-}
-
-.footer-wrapper {
-  border-top: 2px solid $lightborder;
-  margin-top: 2em;
-}
-
-footer {
-  padding-bottom: 2.5em;
-  padding-top: 2.5em;
-}
-
 hr {
   border: 1px solid $lightborder;
+}
+
+h1 a{
+  color: $magenta;
+}
+
+a {
+  color: $green;
+}
+
+.container{
+  @include outer-container;
+}
+.main-photo{
+  @include span-columns(3);
+}
+.main-bio{
+  @include span-columns(9);
 }
