--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,9 @@
 {% include header.html %}
 
 <section class="container">
-
-	<div class="main-photo">
-	</div>
-	<div class="main-bio">
-		{{ content }}
-	</div>
+    <p class="main-bio">
+        {{ content }}
+    </p>
 </section>
 
 {% include footer.html %}
