--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,13 @@
-    <!DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="initial-scale=1">
         <title>{{site.title}} • {{page.title}}</title>
     </head>
-    <link href="{{ site.baseurl }}assets/stylesheets/css/app.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="{{ site.baseurl }}assets/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <body class="home">
-            <header>
-                <h1><a href="/">{{ site.title }}</a></h1>
-                <nav>
-                    <a href="{{ site.baseurl }}">Home</a>
-                </nav>
-            </header>
-
+        <header>
+        </header>
         <div class="wrapper">
