--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 {% include header.html %}
 
 <section class="container">
-    <p class="main-bio">
+    <div class="main-bio">
+        <h1>{{ page.title }}</h1>
         {{ content }}
-    </p>
+    </div>
 </section>
 
 {% include footer.html %}
