minor tweaks to bg opacity and colors

--- a/talks/css/theme/beige.css
+++ b/talks/css/theme/beige.css
@@ -146,3 +146,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #8b743d; }
+
+p {
+  color: #bf7300; }
