--- a/talks/css/theme/default.css
+++ b/talks/css/theme/default.css
@@ -146,3 +146,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #13daec; }
+
+p {
+  color: #bf7300; }
