--- a/talks/css/theme/night.css
+++ b/talks/css/theme/night.css
@@ -134,3 +134,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #e7ad52; }
+
+p {
+  color: #bf7300; }
