--- a/talks/css/theme/serif.css
+++ b/talks/css/theme/serif.css
@@ -136,3 +136,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #51483d; }
+
+p {
+  color: #bf7300; }
