--- a/talks/css/theme/sky.css
+++ b/talks/css/theme/sky.css
@@ -143,3 +143,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #3b759e; }
+
+p {
+  color: #bf7300; }
