--- a/talks/css/theme/template/settings.scss
+++ b/talks/css/theme/template/settings.scss
@@ -8,6 +8,7 @@ $backgroundColor: #2b2b2b;
 $mainFont: 'Lato', sans-serif;
 $mainFontSize: 36px;
 $mainColor: #eee;
+$secondaryColor: #BF7300;
 
 // Headings
 $headingMargin: 0 0 20px 0;
