--- a/talks/css/theme/simple.css
+++ b/talks/css/theme/simple.css
@@ -136,3 +136,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: darkblue; }
+
+p {
+  color: #bf7300; }
