--- a/talks/css/theme/solarized.css
+++ b/talks/css/theme/solarized.css
@@ -146,3 +146,6 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #268bd2; }
+
+p {
+  color: #bf7300; }
