--- a/talks/css/theme/source/simple.scss
+++ b/talks/css/theme/source/simple.scss
@@ -10,8 +10,6 @@
 // Default mixins and settings -----------------
 @import "../template/mixins";
 @import "../template/settings";
-@import "../bourbon/bourbon";
-@import "../neat/neat";
 // ---------------------------------------------
 
 
@@ -23,6 +21,7 @@
 
 // Override theme settings (see ../template/settings.scss)
 $mainFont: 'Lato', sans-serif;
+$mainFontSize: 24px;
 $mainColor: #000;
 $headingFont: 'News Cycle', Impact, sans-serif;
 $headingColor: #000;
@@ -34,15 +33,6 @@ $linkColorHover: lighten( $linkColor, 20% );
 $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
 $imgBorder: 0;
 
-ul.grid{
-    @include outer-container;
-    @include fill-parent;
-    text-align: center;
-    margin: 0 auto;
-    li {
-        @include span-columns(2);
-    }
-}
 // Theme template ------------------------------
 @import "../template/theme";
 // ---------------------------------------------
