--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,6 @@
 doctype html
 html(class="no-js", lang="en")
-    include header
+    include ./_includes/header
     body
         div.row
             div(class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius")
@@ -26,4 +26,4 @@ html(class="no-js", lang="en")
                 h2(class="text-right")
                     a(href="https://github.com/juliancwirko/generator-zf5")
                         i(class="fa fa-twitter")
-        include footer
+        include ./_includes/footer
