--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,35 @@
-{% include header.html %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{{ page.title }}</title>
+        <meta name="viewport" content="width=device-width">
 
-<section class="container">
-    <div class="main-bio">
-        <h1>{{ page.title }}</h1>
-        {{ content }}
-    </div>
-</section>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
+        <link rel="stylesheet" href="/css/main.css">
 
-{% include footer.html %}
+    </head>
+    <body>
+
+        <div class="site">
+          <div class="header">
+            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+            <a class="extra" href="/">home</a>
+          </div>
+
+          {{ content }}
+
+          <div class="footer">
+            <div class="contact">
+              <p>
+                <a href="https://github.com/pamo">github.com/pamo</a><br />
+                <a href="https://twitter.com/pmocampo">twitter.com/pmocampo</a><br />
+              </p>
+            </div>
+          </div>
+        </div>
+
+    </body>
+</html>
