--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/foundation/foundation.css">
+        <link rel="stylesheet" href="/css/lib/foundation.css">
+        <link rel="stylesheet" href="/css/lib/font-awesome.css">
         <link rel="stylesheet" href="/css/main.css">
 
     </head>
