--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/css/lib/foundation.css">
         <link rel="stylesheet" href="/css/lib/font-awesome.css">
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/socicon.css">
 
     </head>
     <body>
@@ -22,14 +23,17 @@
 
           {{ content }}
 
-          <div class="footer">
+          <footer>
             <div class="contact">
-              <p>
-                <a href="https://github.com/pamo">github.com/pamo</a><br />
-                <a href="https://twitter.com/pmocampo">twitter.com/pmocampo</a><br />
-              </p>
+                <ul class="social">
+                    <li><a href="http://twitter.com/pmocampo"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="http://github.com/pamo"><i class="fa fa-github"></i></a></li>
+                    <li><a href="http://facebook.com/pamocampo"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
+                    <li><a href="http://instagram.com/pmocampo"><i class="fa fa-instagram"></i></a></li>
+                </ul>
             </div>
-          </div>
+          </footer>
         </div>
 
     </body>
