--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
                     <li><a href="http://facebook.com/pamocampo"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="http://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
                     <li><a href="http://instagram.com/pmocampo"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="http://pamo.tumblr.com"><i class="fa fa-tumblr"></i></a></li>
                 </ul>
             </div>
           </footer>
