Added about me, cleaned up css, imagemin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
+        <!-- WebFonts -->
+        <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/lib/foundation.css">
         <link rel="stylesheet" href="/css/lib/font-awesome.css">
@@ -19,6 +24,7 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
+            <a class="extra" href="/about.html">about</a>
           </div>
 
           {{ content }}
