--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -16,3 +16,113 @@ ul.social{
         font-size: 2em;
     }
 }
+
+article {
+    $serif: 'Lusitana', serif;
+    $serif-2: 'Merriweather', serif;
+    $sans-serif: 'Merriweather Sans', sans-serif;
+
+    &:after {
+        content:"";
+        display:table;
+        clear:both;
+    }
+
+    text-align: left;
+
+    .type {
+        border-bottom: 1px solid;
+        display: inline-block;
+        font-family: $sans-serif;
+        font-size: .7em;
+        font-weight: 700;
+        margin-bottom: 2em;
+        padding: .3em 0;
+        text-align: left;
+        text-transform: uppercase;
+    }
+
+    h1 {
+        font-family: $serif;
+        font-size: 2em;
+        font-weight: 700;
+        margin-bottom: .5em;
+    }
+
+    h2 {
+        font-family: $serif-2;
+        font-style: italic;
+        font-size: 1em;
+        font-weight: 400;
+        line-height: 1.6em;
+        margin-bottom: .9em;
+    }
+
+    code {
+        white-space: nowrap;
+        font-family: monaco;
+        background: #F7F7F7;
+        border: 1px solid #E0E0E0;
+        padding: .1em .4em;
+        font-size: .75em;
+        font-style: normal;
+    }
+
+    h3 {
+        font-family: $serif;
+        font-size: 1.4em;
+        font-weight: 400;
+        line-height: 1.3em;
+        margin-bottom: .4em;
+    }
+
+    p.date {
+        font-family: $serif-2;
+        font-style: italic;
+        font-size: .9em;
+        margin-bottom: .3em;
+    }
+
+    p {
+        font-family: $serif-2;
+        line-height: 1.6em;
+        font-size: .9em;
+        margin-bottom: 1.5em;
+        word-wrap: break-word;
+
+        span {
+            font-family: $sans-serif;
+            font-weight: 700;
+        }
+    }
+
+    a.read-more {
+        display: inline-block;
+        font-family: $sans-serif;
+        font-weight: 700;
+        font-size: .8em;
+        text-transform: uppercase;
+        margin-left: .2em;
+        position: relative;
+
+        span {
+            font-family: $serif;
+            font-style: normal;
+            position: absolute;
+            font-size: 1.5em;
+            top: -1px;
+            right: -12px;
+        }
+    }
+
+    .display-inline {
+        display: inline;
+        & + * {
+            display: inline;
+        }
+    }
+
+    hr {
+        width: 3em;
+    }
+}
