--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,9 @@ html, body {
   height: 100%; }
 
 body {
-  background-color: black;
   font: 13.34px Helvetica, Arial, sans-serif;
   font-size: small;
   text-align: center; }
-
-h1 {
-  margin-bottom: 1em; }
 
 p {
   margin: 1em 0; }
@@ -28,13 +24,6 @@ p {
 /* Home
 /*
 /*****************************************************************************/
-.posts {
-  list-style-type: none;
-  margin-bottom: 2em; }
-
-.posts li {
-  line-height: 1.75em; }
-
 /*****************************************************************************/
 /*
 /* Site
@@ -42,7 +31,7 @@ p {
 /*****************************************************************************/
 .site {
   text-align: justify;
-  width: 42em;
+  max-width: 50em;
   margin: 3em auto 2em;
   line-height: 1.5em; }
 
@@ -51,7 +40,11 @@ p {
   text-decoration: none; }
 
 .title {
-  display: inline-block; }
+  text-transform: lowercase;
+  display: block; }
+  @media only screen and (min-width: 64.063em) {
+    .title {
+      display: inline-block; } }
 
 .title a:hover {
   color: #000; }
@@ -370,3 +363,81 @@ ul.social {
     float: left;
     padding: 0 5px 0 5px;
     font-size: 2em; }
+
+article {
+  text-align: left; }
+  article:after {
+    content: "";
+    display: table;
+    clear: both; }
+  article .type {
+    border-bottom: 1px solid;
+    display: inline-block;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 0.7em;
+    font-weight: 700;
+    margin-bottom: 2em;
+    padding: 0.3em 0;
+    text-align: left;
+    text-transform: uppercase; }
+  article h1 {
+    font-family: 'Lusitana', serif;
+    font-size: 2em;
+    font-weight: 700;
+    margin-bottom: 0.5em; }
+  article h2 {
+    font-family: 'Merriweather', serif;
+    font-style: italic;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 1.6em;
+    margin-bottom: 0.9em; }
+  article code {
+    white-space: nowrap;
+    font-family: monaco;
+    background: #F7F7F7;
+    border: 1px solid #E0E0E0;
+    padding: 0.1em 0.4em;
+    font-size: 0.75em;
+    font-style: normal; }
+  article h3 {
+    font-family: 'Lusitana', serif;
+    font-size: 1.4em;
+    font-weight: 400;
+    line-height: 1.3em;
+    margin-bottom: 0.4em; }
+  article p.date {
+    font-family: 'Merriweather', serif;
+    font-style: italic;
+    font-size: 0.9em;
+    margin-bottom: 0.3em; }
+  article p {
+    font-family: 'Merriweather', serif;
+    line-height: 1.6em;
+    font-size: 0.9em;
+    margin-bottom: 1.5em;
+    word-wrap: break-word; }
+    article p span {
+      font-family: 'Merriweather Sans', sans-serif;
+      font-weight: 700; }
+  article a.read-more {
+    display: inline-block;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-weight: 700;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    margin-left: 0.2em;
+    position: relative; }
+    article a.read-more span {
+      font-family: 'Lusitana', serif;
+      font-style: normal;
+      position: absolute;
+      font-size: 1.5em;
+      top: -1px;
+      right: -12px; }
+  article .display-inline {
+    display: inline; }
+    article .display-inline + * {
+      display: inline; }
+  article hr {
+    width: 3em; }
