Manage drafts and permalinks with categories

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article>
-<p class="article-type">{{ page.type }}</p>
+<p class="post-category">{{ page.category }}</p>
 <h1>{{ page.title }}</h1>
 <p class="date">{{ page.date | date_to_string }}</p>
 <p>{{ content }}</p>
