PBJS draft with image

--- a/_scss/_reset.scss
+++ b/_scss/_reset.scss
@@ -119,3 +119,22 @@ footer {
 .post pre.terminal code {
     background-color: #333;
 }
+article{
+    blockquote {
+        border-left: 0;
+        p:before{
+            font-family: FontAwesome;
+            position: relative;
+            top: 0.2em;
+            content:"\f10d";
+            font-size: 4em;
+            margin-right: 0.2em;
+        }
+    }
+    img {
+        max-height: 400px;
+        float: left;
+        margin-right: $base-spacing;
+    }
+}
+
