--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,27 +20,36 @@
     <body>
 
         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-            <a class="extra" href="/about.html">about</a>
-          </div>
-
-          {{ content }}
-
-          <footer>
-            <div class="contact">
-                <ul class="social">
-                    <li><a href="http://twitter.com/pmocampo"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="http://github.com/pamo"><i class="fa fa-github"></i></a></li>
-                    <li><a href="http://facebook.com/pamocampo"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="http://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
-                    <li><a href="http://instagram.com/pmocampo"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="http://pamo.tumblr.com"><i class="fa fa-tumblr"></i></a></li>
-                </ul>
+            <div class="header">
+                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+                <a class="extra" href="/">home</a>
+                <a class="extra" href="/about.html">about</a>
             </div>
-          </footer>
-        </div>
 
+            {{ content }}
+
+            <footer>
+                <div class="contact">
+                    <ul class="social">
+                        <li><a href="http://twitter.com/pmocampo"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="http://github.com/pamo"><i class="fa fa-github"></i></a></li>
+                        <li><a href="http://facebook.com/pamocampo"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="http://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
+                        <li><a href="http://instagram.com/pmocampo"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://pamo.tumblr.com"><i class="fa fa-tumblr"></i></a></li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-47277958-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
     </body>
 </html>
