Minor css tweaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article>
+<article class="post">
 <p class="post-category">{{ page.category }}</p>
 <h1>{{ page.title }}</h1>
 <p class="date">{{ page.date | date_to_string }}</p>
