Opening icon tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,12 @@
             <footer>
                 <div class="contact">
                     <ul class="social">
-                        <li><a href="http://twitter.com/pmocampo" rel="me">i class="fa fa-twitter"></i></a></li>
-                        <li><a href="http://github.com/pamo" rel="me">i class="fa fa-github"></i></a></li>
-                        <li><a href="http://facebook.com/pamocampo" rel="me">i class="fa fa-facebook"></i></a></li>
-                        <li><a href="http://foursquare.com/pmocampo" rel="me">i class="fa fa-foursquare"></i></a></li>
-                        <li><a href="http://instagram.com/pmocampo" rel="me">i class="fa fa-instagram"></i></a></li>
-                        <li><a href="http://pamo.tumblr.com" rel="me">i class="fa fa-tumblr"></i></a></li>
+                        <li><a href="http://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="http://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
+                        <li><a href="http://facebook.com/pamocampo" rel="me"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="http://foursquare.com/pmocampo" rel="me"><i class="fa fa-foursquare"></i></a></li>
+                        <li><a href="http://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
                     </ul>
                 </div>
             </footer>
