--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
                     <ul class="social">
                         <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://facebook.com/pamocampo" rel="me"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://foursquare.com/pmocampo" rel="me"><i class="fa fa-foursquare"></i></a></li>
+                        <li><a href="https://facebook.com/pamocampo/about" rel="me"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
                         <li><a href="https://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
                     </ul>
