--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@pmocampo">
         <meta name="twitter:title" content="{{ page.title }}">
-        <meta name="twitter:description" content="{{ post.content | strip_html | truncate:150 }}">
+        <meta name="twitter:description" content="{{ content | strip_html | strip_newlines | truncate:150 }}">
         <meta name="twitter:creator" content="@pmocampo">
         <meta name="twitter:image" content="http://likescoffee.com/images/background.jpg">
 
@@ -32,7 +32,7 @@
         <meta property="og:type" content="article" />
         <meta property="og:url" content="http://likescoffee.com/" />
         <meta property="og:image" content="http://likescoffee.com/images/background.jpg" />
-        <meta property="og:description" content="{{ post.content | strip_html | truncate:150 }}" /> 
+        <meta property="og:description" content="{{ content | strip_html | strip_newlines | truncate:150 }}" /> 
         <meta property="og:site_name" content="LikesCoffee" />
         <meta property="fb:admins" content="1397070010" />
 
